# mogrix

./: .gitignore  .mcp.json  BOOTSTRAP.md  BUILD_ORDER.md  CLAUDE.md  Claude.md  HANDOFF.md  LICENSE  Makefile  README.md  cleanup.sh  idea.md  plan.md  pyproject.toml  rpmlint.toml
analysis/: analyze_sgifixes.py  analyze_spec_diffs.py  analyze_tdnf_deps.py  sgifixes_summary.json  spec_diff_summary.json  tdnf_deps.json
compat/: catalog.yaml  strtof.c  x11_xge_stubs.c
cross/: bitlbee-plugin-symbols.list  bitlbee-plugin-symbols.ver  cmake-irix-toolchain.cmake  irix-shared.lds  meson-irix-cross.ini  rpmmacros.irix
docs/: tinc-irix-guide.txt
headers/generic/: Makefile.am  Makefile.in  ctype.h  netdb.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  unistd.h  utmpx.h  wchar.h
headers/generic/arpa/: inet.h
headers/generic/sys/: Makefile.am  Makefile.in  termio.h  time.h  types.h
lld-fixes/: 01-writer-irix-elf-compat.patch  02-inputfiles-mips-local-symbols.patch  03-elf-header-sh-entsize-zero.patch  README.md  build-lld-irix.sh
mogrix/: __init__.py  batch.py  batch_build.py  bundle.py  cli.py  repometa.py  roadmap.py  roadmap_check.py  rule_generator.py  staging.py  test.py  upstream.py
patches/: rpm-no-tls.patch
rules/: GENERIC_SUMMARY.md  INDEX.md  generic.yaml  non_fedora_packages.yaml  roadmap_config.yaml  source_checks.yaml  sysroot_provides.yaml
scripts/: bootstrap-tarball.sh  build-lld-irix.sh  create-repo.py  deploy-tdnf-configs.sh  generate_rules.py  irix-bootstrap.sh  irix-chroot-testing.sh  start-repo-server.sh  (+2 more)
(+311 files in other folders)
