[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mogrix"
version = "0.1.0"
description = "SRPM conversion engine for IRIX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "specfile>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
lint = [
    "rpmlint>=2.8.0",
]

[project.scripts]
mogrix = "mogrix.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
