NULL=

SUBDIRS=			\
	sys			\
	$(NULL)

# Install to a separate directory that will be searched first via -isystem
clangcompatdir=$(includedir)/dicl-clang-compat

clangcompat_HEADERS=		\
	ctype.h			\
	netdb.h			\
	setjmp.h		\
	signal.h		\
	stdarg.h		\
	stdbool.h		\
	stddef.h		\
	stdint.h		\
	stdio.h			\
	wchar.h			\
	$(NULL)
